--- a/wp-content/themes/cocoon-child-master/scss/lp/components/_hero.scss
+++ b/wp-content/themes/cocoon-child-master/scss/lp/components/_hero.scss
@@ -81,12 +81,12 @@
 
 .lp-hero__smartphone {
   position: absolute;
-  // 画像を余白なしで再書き出し（824×1064）したため、旧バウンディングボックスと縦の高さが
+  // 画像を余白なしで再書き出し（882×1089）したため、旧バウンディングボックスと縦の高さが
   // 揃うよう幅を再計算し、中心位置が変わらないようleftも再計算している
-  left: 37.9%;
+  left: 37.33%;
   bottom: 0;
-  width: 24.98vw;
-  aspect-ratio: 824 / 1064;
+  width: 26.12vw;
+  aspect-ratio: 882 / 1089;
   overflow: hidden;
   pointer-events: none;
 
@@ -97,7 +97,7 @@
   }
 
   @include m.sp {
-    left: 5.22%;
-    width: 78.62vw;
+    left: 3.42%;
+    width: 82.21vw;
   }
 }
